# Developing-a-Data-Driven-Investment-Thesis

./: CMakeLists.txt  README.md  main.cpp
include/: backtesting.h  data_analysis.h  data_collection.h  evaluation.h  strategy_formulation.h
src/: backtesting.cpp  data_analysis.cpp  data_collection.cpp  evaluation.cpp  strategy_formulation.cpp
